--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Polytechnic Attendance Login</title>
-</head>
+<head><title>Polytechnic Login</title></head>
 <body>
-  <h3>Teacher Login</h3>
-  <input placeholder="Username"><br><br>
-  <input type="password" placeholder="Password"><br><br>
-  <button>Login</button>
+<h3>Teacher Login</h3>
+<input id="u" placeholder="Username">
+<input id="p" type="password" placeholder="Password">
+<button onclick="login()">Login</button>
+
+<script>
+function login(){
+  if(u.value && p.value){
+    localStorage.setItem("login","yes");
+    location.href="attendance.html";
+  }
+}
+</script>
 </body>
 </html>
