--- a/attendance.html
+++ b/attendance.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Attendance</title>
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -9,9 +8,9 @@
 <h3>Mark Attendance</h3>
 
 <select id="subject"></select>
-<input type="date" id="date">
-<table id="table"></table>
+<input type="date" id="date"><br><br>
 
+<table id="table"></table>
 <button onclick="submitAttendance()">Submit</button>
 
 <script src="js/app.js"></script>
